    usr/share/petname/adjectives.txt =>
    usr/share/petname/medium/adjectives.txt,
    usr/share/petname/adverbs.txt =>
    usr/share/petname/medium/adverbs.txt, usr/share/petname/names.txt =>
    usr/share/petname/medium/names.txt:
    - default to our simplest word-base, which gives ~205K adjective-animal
      combinations, which are memorable, by default

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Aug 2016 22:13:38 -0500

petname (2.3-0ubuntu1) yakkety; urgency=medium

  * debian/tests/check_words:
    - bypass the dict(1) tests when building in the buildd

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Aug 2016 22:13:36 -0500

petname (2.2-0ubuntu1) yakkety; urgency=medium

  * debian/control:
    - add a couple of ispell build-deps, to fix broken build

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Aug 2016 21:37:06 -0500

petname (2.1-0ubuntu1) yakkety; urgency=medium

  * debian/blacklist.txt, debian/tests/check_words,
    usr/share/petname/names.txt:
    - manual dictionary scrub of animal names;  I checked and read every
      entry to ensure names.txt consists only of animals
  * usr/share/petname/adverbs.txt, usr/share/petname/names.txt:
    - remove any adverbs/adjectives which are not recognized by ispell
  * debian/blacklist.txt, debian/tests/check_words,
    usr/share/petname/adjectives.txt, usr/share/petname/adverbs.txt:
    - add more tests
    - remove adverbs that aren't adverbs
    - remove adjectives that aren't adjectives
  * debian/tests/check_words, usr/share/petname/adjectives.txt:
    - add a test to detect repeated words
    - remove some repeated words
  * debian/tests/check_words, debian/whitelist.txt,
    usr/share/petname/names.txt:
    - simplify animal names further
    - add dictionary tests to ensure animal names are nouns and common
  * debian/blacklist.txt, debian/tests/check_words,
    usr/share/petname/adjectives.txt, usr/share/petname/adverbs.txt,
    usr/share/petname/names.txt: